--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
     "typescript": "3.7.2",
     "yup": "^0.27.0"
@@ -22,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.tsx && prettier --write src/**/*.scss"
+    "format": "prettier --write src/**/*.tsx && prettier --write src/**/*.scss",
+    "lint": "eslint src/**/*.tsx && eslint src/**/*.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,7 +63,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
+      "npm run lint",
       "prettier --write",
       "git add"
     ]
