--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "firebase": "^7.6.0",
     "formik": "^2.0.6",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
