--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "dependencies": {
     "@iconify/icons-twemoji": "^1.0.6",
     "@iconify/react": "^1.1.1",
+    "@reduxjs/toolkit": "^1.2.3",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
     "firebase": "^7.6.0",
     "formik": "^2.0.6",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.7.2",
     "yup": "^0.27.0"
   },
@@ -45,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
