--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "axios": "^0.19.2",
     "firebase": "^7.6.0",
     "formik": "^2.0.6",
     "node-sass": "^4.13.1",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
