--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-facebook-login": "^4.1.1",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
